# plico

./: .gitignore  .pre-commit-config.yaml  .~lock.screening_final7.xlsx#  AGENTIC_README.md  AGENTS.md  LICENSE  MANIFEST_README.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  tasks.py  vulture_whitelist.py
.github/: dependabot.yml
.github/workflows/: ci.yml
USE_CASES/: resume_screening.md
ai/: agents_conventions.md  agents_modules.md  agents_orchestrator.md  agents_reference.md  agents_testing.md  agents_use_cases.md
config/: clients.yaml  clients.yaml.example  logging.yaml  main.yaml  model_defaults.yaml  paths.yaml  sample_workbook.yaml  test.yaml
config/prompts/: screening_planning.yaml  screening_skills_planning.yaml  screening_static.yaml  screening_synthesis.yaml
convenience/: screening.sh  screening_manifest.sh
docs/: CLIENT API USER GUIDE.md  CONDITIONAL EXPRESSIONS USER GUIDE.md  CONFIGURATION.md  ORCHESTRATOR README.md  TEST_COVERAGE.md
docs/analysis/: LITELLM_INTEGRATION_ANALYSIS.md
docs/architecture/: ARCHITECTURE.md  CLIENTS_ARCHITECTURE.md  MANIFEST_ARCHITECTURE.md  ORCHESTRATOR_ARCHITECTURE.md  RAG_ARCHITECTURE.md  SHARED_HISTORY_DESIGN.md
docs/designs/: FFLITELLM_CLIENT_DESIGN.md  conditional-execution-design.md  document_reference_system.md  excel-orchestrator-design.md  parallel-execution-design.md
docs/func/: functionality.md
docs/ideas/: Proposal -- Plico 2.md
docs/plans/: LITELLM_INTEGRATION_PLAN.md  excel-orchestrator-plan.md  manifest_based_orchestration.md  parallel-execution-plan.md
docs/proposals/: 001-conditional-execution.md  002-variable-templating-batch-execution.md
docs/sessisons/: sessions.txt
docs/source/: conf.py  index.rst
manifest_samples/: README.md
manifest_samples/linkedin_ai_post/: clients.yaml  config.yaml  manifest.yaml  prompts.yaml
manifest_samples/linkedin_ai_post_v2/: clients.yaml  config.yaml  manifest.yaml  prompts.yaml
manifest_samples/observability_demo/: config.yaml  manifest.yaml  prompts.yaml
manifest_samples/observability_native_clients/: config.yaml  manifest.yaml  prompts.yaml
sample_wkbooks/: .~lock.screening_final6.xlsx#
scripts/: create_sample_workbook.py  create_sample_workbook_batch.py  create_sample_workbook_conditional.py  create_sample_workbook_documents.py  create_sample_workbook_max.py  create_sample_workbook_multiclient.py  create_screening_manifest.py  create_screening_workbook.py  create_test_workbook.py  create_test_workbook_batch.py  create_test_workbook_conditional.py  create_test_workbook_documents.py  create_test_workbook_max.py  create_test_workbook_multiclient.py  export_manifest.py  inspect_parquet.py  linkedin_ai_post.py  manifest_export.py  manifest_extract.py  manifest_inspect.py  manifest_run.py  parquet_to_excel.py  run_manifest.py  run_orchestrator.py  sample_workbook_agent_create_v001.py  sample_workbook_agent_validate_v001.py  sample_workbook_basic_create_v001.py  sample_workbook_basic_validate_v001.py  sample_workbook_batch_create_v001.py  sample_workbook_batch_validate_v001.py  sample_workbook_conditional_create_v001.py  sample_workbook_conditional_validate_v001.py  sample_workbook_documents_create_v001.py  sample_workbook_documents_validate_v001.py  sample_workbook_max_create_v001.py  sample_workbook_max_validate_v001.py  sample_workbook_multiclient_create_v001.py  sample_workbook_multiclient_validate_v001.py  sample_workbook_screening_create_v001.py  sample_workbook_screening_create_v002.py  (+3 more)
scripts/_shared/: __init__.py  client.py  logging.py  progress.py
scripts/sample_workbooks/: __init__.py  base.py  builders.py  screening.py  utils.py  validators.py
scripts/validation/: __init__.py  spot_check.py  validate_all.py
src/: ConversationHistory.py  FFAI.py  FFAIClientBase.py  OrderedPromptHistory.py  PermanentHistory.py  __init__.py  config.py  prompt_templates.py  retry_utils.py
src/Clients/: FFAnthropic.py  FFAnthropicCached.py  FFAzureClientBase.py  FFAzureCodestral.py  FFAzureDeepSeek.py  FFAzureDeepSeekV3.py  FFAzureLiteLLM.py  FFAzureMSDeepSeekR1.py  FFAzureMistral.py  FFAzureMistralSmall.py  FFAzurePhi.py  FFGemini.py  FFLiteLLMClient.py  FFMistral.py  FFMistralSmall.py  FFNvidiaDeepSeek.py  FFOpenAIAssistant.py  FFPerplexity.py  __init__.py  model_defaults.py
src/RAG/: FFEmbeddings.py  FFRAGClient.py  FFVectorStore.py  __init__.py  mcp_tools.py  text_splitter.py
src/agent/: __init__.py  agent_loop.py  agent_result.py
src/core/: __init__.py  client_base.py  history_exporter.py  pricing.py  prompt_builder.py  prompt_utils.py  response_context.py  response_result.py  response_utils.py  usage.py
src/misc_code/: DataSerializer.py  FFAIClientPool.py  PromptBuilder.py  ResponseProcessor.py  _FactoryFFAzureOpenAI.py
src/observability/: __init__.py  log_context.py  telemetry.py
src/orchestrator/: __init__.py  agent_executor.py  builtin_tools.py  client_registry.py  condition_evaluator.py  discovery.py  (+21 more)
tests/: conftest.py  test_abort_condition.py  test_agent.py  test_agent_executor.py  test_builtin_tools.py  test_client_registry.py  test_condition_evaluator.py  test_config.py  test_conversation_history.py  test_discovery.py  test_discovery_injection.py  test_document_processor.py  test_document_registry.py  test_excel_orchestrator.py  test_execution_strategies.py  test_executor.py  test_explain.py  test_ffai.py  test_ffaiclient_base.py  test_ffanthropic.py  test_ffanthropic_cached.py  test_ffazure_clients.py  test_ffazure_litellm.py  test_ffgemini.py  test_fflitellm_client.py  test_ffmistral.py  test_ffmistralsmall.py  test_ffnvidia_deepseek.py  test_ffopenai_assistant.py  test_ffperplexity.py  test_graph.py  test_history_exporter.py  test_litellm_orchestrator_integration.py  test_manifest.py  test_manifest_comprehensive.py  test_mcp_tools.py  test_model_defaults.py  test_observability.py  test_orchestrator_base.py  test_ordered_prompt_history.py  (+33 more)
working_docs/: cli_refactoring_remaining_work.md  excel_orchestrator_refactoring_plan.md  orchestrator_cli_refactoring_plan.md  rag_document_processing_fixes.md
(+67 files in other folders)
