[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffclients"
version = "0.1.0"
description = "Declarative AI orchestration — one manifest protocol, three authoring paths"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Antonio Quinonez", email = "antquinonez@farfiner.com"}
]

dependencies = [
    "mistralai>=1.12.4,<3.0.0",
    "anthropic>=0.84.0,<1.0.0",
    "openai>=2.24.0,<3.0.0",
    "azure-ai-inference>=1.0.0b9,<2.0.0",
    "azure-core>=1.38.0,<2.0.0",
    "google-auth>=2.48.0,<3.0.0",
    "duckdb>=1.4.0,<2.0.0",
    "requests>=2.32.0,<3.0.0",
    "pandas>=3.0.0,<4.0.0",
    "polars[rtcompat]>=1.38.0,<2.0.0",
    "python-dotenv>=1.2.0,<2.0.0",
    "nest_asyncio>=1.6.0,<2.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "pyarrow>=23.0.0,<25.0.0",
    "litellm>=1.81.0,<2.0.0",
    "pydantic-settings>=2.13.0,<3.0.0",
    "pyyaml>=6.0,<7.0",
    "chromadb>=1.5.0,<2.0.0",
    "json-repair>=0.58.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
    "ruff",
    "invoke>=2.0.0",
    "vulture>=2.16",
]
otel = [
    "opentelemetry-api>=1.40.0",
    "opentelemetry-sdk>=1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "llamaparse: tests requiring LlamaParse API access",
    "integration: tests requiring real API keys",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "src.Clients*", "src.workbook*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]
exclude = [
    "src/misc_code",
    "scripts",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "PLC",    # pylint convention (unreachable, import placement)
    "PLW",    # pylint warning (useless patterns)
    "RET",    # flake8-return (unnecessary return)
    "RUF",    # ruff-specific (reachable-after-raise, unused noqa)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B905",   # zip without explicit strict
    "B904",   # raise from err (common pattern in this codebase)
    "ARG001", # unused function argument (common in callbacks)
    "ARG002", # unused method argument
    "RUF001", # string with unescaped special chars
    "RUF002", # docstring with unescaped special chars
    "RUF003", # comment with unescaped special chars
    "RET504", # unnecessary-assign-before-return
    "RET505", # unnecessary-else-after-return
    "RET506", # unnecessary-else-after-raise
    "RET507", # unnecessary-else-after-break/continue
    "RET508", # unnecessary-else-after-raise (variant)
    "PLC0415", # import not at top-level (lazy imports for optional deps, circular import avoidance)
    "RUF012", # mutable class attribute (class-level constants/registries)
    "PLW0108", # unnecessary lambda (wrapping with null guards)
    "PLW0603", # global statement (singleton config pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "SIM", "E712", "F841", "F811", "SIM117", "C401", "PLW", "RET", "RUF"]
"src/Clients/*" = ["B904", "F841", "UP038", "PLW"]
"tasks.py" = ["ARG001", "E501"]
"vulture_whitelist.py" = ["F821", "B018"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
